--- a/Final_project/.R/Final_Proj.Rmd
+++ b/Final_project/.R/Final_Proj.Rmd
@@ -697,7 +697,7 @@ Joined_data_for_M_D_trim <- Joined_data_for_M_D %>%
 ```
 
 
-> Oh god. This is an abomination. Okay, nothing to see here. I removed the graph since It was not graphing properly (it was for comedic and practice purposes) Let's stick to regular graphs.
+> Oh god. This is an abomination. Okay, nothing to see here. I removed the graph since It was not graphing properly (it was for comedic and practice purposes). Let's stick to regular graphs.
 
 > Overall, the follow-up data indicates that the divorce trend is out-growing the marriage trend. This observed effect needs to be investigated more in order to rectify the absurdly high divorce rate here in the States within the past couple of decates.
 
